--- a/styles/global-style.css
+++ b/styles/global-style.css
@@ -1,20 +1,49 @@
-body {
+body{
   font-family: "Quicksand", sans-serif;
   margin: 0;
 }
 
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-#page-logo a {
+#page-logo a{
   padding: 10px;
   font-family: "Oleo Script", sans-serif;
   color: rgb(216, 150, 27);
-  font-size: 50px;
+  font-size: 35px;
   text-decoration: none;
   text-transform: uppercase;
   text-shadow: 1px 1px 2px rgb(0, 0, 0);
 }
+
+header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  padding: 15px 60px;
+}
+
+header ul{
+  width: 200px;
+  display: flex;
+  justify-content: space-around;
+  text-align: right;
+}
+
+header li{
+  margin-left: 20px;
+}
+
+ul{
+  list-style: none;
+  margin: 0px;
+  padding: 0;
+  width: 0;
+}
+
+
+li a{
+  text-decoration:  none;
+  color: rgb(26, 26, 26);
+}
+
+
