update index html & styles

--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -1,11 +1,11 @@
-#hero{
+#hero {
   height: 800px;
   background-image: url("../images/ocean.jpg");
   background-position: center;
-  background-size: cover;
+  background-size: cover; 
 }
 
-#hero-content{
+#hero-content {
   width: 900px;
   background-color: rgba(51, 47, 47, 0.8);
   box-shadow: 2px 4px 8px rgb(68, 67, 67);
@@ -13,4 +13,115 @@
   text-align: center;
   padding: 50px 0;
   margin: 0 auto;
+  position: relative;
+  top: 200px;
 }
+
+#hero-content h1 {
+  color: white;
+  text-transform: uppercase;
+  font-size: 50px;
+  font-family: "Raleway", sans-serif;
+  margin: 0;
+}
+
+#hero-content p {
+  color: white;
+  text-transform: uppercase;
+  font-size: 24px;
+  font-weight: 300;
+  margin-bottom: 32px;
+}
+
+#hero-content a {
+  text-decoration: none;
+  background-color: rgb(255, 251, 0);
+  padding: 12px 24px;
+  color: black;
+  font-size: 24px;
+  font-weight: 700;
+  border-radius: 8px;
+  box-shadow: 2px 4px 8px rgb(68, 67, 67);
+}
+
+#hero-content a:hover {
+  background-color: rgb(255, 238, 0);
+}
+
+#highlights {
+  background-color: rgba(196, 238, 241, 255);
+  margin-top: -24px;
+}
+
+#highlights h2 {
+  color: rgb(59, 65, 64);
+  text-transform: uppercase;
+  text-align: center;
+  margin: 24px 0;
+  padding: 24px 0 0 0;
+}
+
+#highlights p {
+  text-transform: uppercase;
+  font-size: 24px;
+  color: rgb(124, 123, 123);
+  margin: 20px 0;
+}
+
+#highlights strong {
+  color: rgb(0, 160, 117);
+}
+
+#destinations {
+  display: flex;
+  justify-content: center;
+  width: 90%;
+  margin: auto;
+  margin-bottom: 40px;
+  text-align: center;
+}
+
+.destination img {
+  height: 200px;
+  width: 100%;
+  border-radius: 10px;
+  box-shadow: 2px 4px 8px rgb(68, 67, 67);
+  object-fit: cover;
+}
+
+.destination {
+  margin: 0 20px;
+}
+
+footer {
+  background-color: rgb(35, 39, 38);
+  margin-top: -40px;
+}
+
+#social {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+}
+
+#social li{
+  list-style: none;
+}
+
+#social img {
+  width: 100px;
+}
+
+.sosmed{
+  margin: 30px 10px;
+}
+
+/* 
+
+#highlights img{
+  width: 300px;
+  height: 100px;  
+  align-items: center;
+}
+
+*/
