--- a/styles/global-style.css
+++ b/styles/global-style.css
@@ -6,7 +6,7 @@ body{
 #page-logo a{
   padding: 10px;
   font-family: "Oleo Script", sans-serif;
-  color: rgb(216, 150, 27);
+  color: rgb(255, 251, 0);
   font-size: 35px;
   text-decoration: none;
   text-transform: uppercase;
@@ -17,9 +17,12 @@ header{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  flex-wrap: nowrap;
-  flex-direction: row;
   padding: 15px 60px;
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+  box-sizing: border-box;
 }
 
 header ul{
@@ -40,10 +43,17 @@ ul{
   width: 0;
 }
 
-
-li a{
+header a{
   text-decoration:  none;
-  color: rgb(26, 26, 26);
+  color: rgb(255, 251, 0);
+  font-size: 20px;
+  padding: 12px;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+  font-weight: 700;
+  border-radius: 6px;
 }
 
-
+header a:hover{
+  color: rgb(77, 77, 77);
+  background-color: rgb(255, 251, 0);
+}
