--- a/styles/global-style.css
+++ b/styles/global-style.css
@@ -1,19 +1,23 @@
-body{
+body {
   font-family: "Quicksand", sans-serif;
   margin: 0;
 }
 
-#page-logo a{
+#page-logo a {
   padding: 10px;
   font-family: "Oleo Script", sans-serif;
-  color: rgb(255, 251, 0);
-  font-size: 35px;
+  color: rgb(245, 243, 160);
+  font-size: 50px;
   text-decoration: none;
   text-transform: uppercase;
   text-shadow: 1px 1px 2px rgb(0, 0, 0);
 }
 
-header{
+li{
+  list-style: none;
+}
+
+header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -25,26 +29,19 @@ header{
   box-sizing: border-box;
 }
 
-header ul{
+header ul {
   width: 200px;
   display: flex;
   justify-content: space-around;
   text-align: right;
 }
 
-header li{
-  margin-left: 20px;
-}
-
-ul{
+header li {
   list-style: none;
-  margin: 0px;
-  padding: 0;
-  width: 0;
 }
 
-header a{
-  text-decoration:  none;
+header a {
+  text-decoration: none;
   color: rgb(255, 251, 0);
   font-size: 20px;
   padding: 12px;
@@ -53,7 +50,30 @@ header a{
   border-radius: 6px;
 }
 
-header a:hover{
+nav a:hover {
   color: rgb(77, 77, 77);
   background-color: rgb(255, 251, 0);
+}
+
+footer {
+  background: linear-gradient(70deg, rgb(24, 24, 24), rgb(25, 29, 29));
+  padding: 36px 0;
+}
+
+footer ul {
+  display: flex;
+  justify-content: center;
+  padding: 0;
+}
+
+footer li {
+  width: 80px;
+  height: 80px;
+  list-style: none;
+  margin: 0 50px;
+}
+
+footer img {
+  width: 100%;
+  height: 100%;
 }
