--- a/styles/places-style.css
+++ b/styles/places-style.css
@@ -1,10 +1,25 @@
+/* &#x2192 UNICODE */
+
 body {
   background: linear-gradient(30deg, rgb(77, 77, 77), rgb(58, 58, 58));
   color: rgb(68, 68, 68);
 }
 
+#page-logo a {
+  color: rgb(183, 230, 235);
+}
+
 header {
   position: static;
+}
+
+header a {
+  color: rgb(183, 230, 235);
+}
+
+header nav a:hover {
+  background-color: rgb(183, 230, 235);
+  color: rgb(59, 59, 59);
 }
 
 ul {
@@ -14,10 +29,15 @@ ul {
 
 main ul {
   width: 1200px;
-  margin: 0 auto;
+  margin: 0 auto 48px auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 24px 24px;
+  gap: 20px 20px;
+}
+
+li:nth-of-type(3) {
+  grid-column: 1 / span 2;
+  width: 1220px;
 }
 
 main li {
@@ -26,7 +46,6 @@ main li {
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
   border-radius: 6px;
   overflow: hidden;
-  width: 600px;
 }
 
 main li img {
@@ -35,15 +54,15 @@ main li img {
   object-fit: cover;
 }
 
-main li h2 {
-  margin: 0;
-}
-
 .item-content {
   padding: 24px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.item-content h2 {
+  margin: 0;
 }
 
 .actions {
@@ -60,13 +79,4 @@ main li h2 {
 .actions a:hover {
   background-color: rgb(235, 253, 255);
   border-radius: 6px;
-}
-
-li:nth-of-type(3) {
-  grid-column: 1 / span 2;
-  width: 1224px;
-}
-
-li:nth-of-type(10) {
-  margin-bottom: 44px;
 }
