--- a/styles/global-style.css
+++ b/styles/global-style.css
@@ -13,7 +13,7 @@ body {
   text-shadow: 1px 1px 2px rgb(0, 0, 0);
 }
 
-li{
+li {
   list-style: none;
 }
 
@@ -50,7 +50,7 @@ header a {
   border-radius: 6px;
 }
 
-nav a:hover {
+header nav a:hover {
   color: rgb(77, 77, 77);
   background-color: rgb(255, 251, 0);
 }
